[006-(0.0.6)] Mobile Dimensions 100vh Height >> Found out that the 100vh bug for iOS mobile was fixed with iOS 8. Have adjusted the dimensions of the mobile version to fully take advantage of the vertical screen real-estate. Also found that the 'search' and 'toolbar' areas of mobile iOS can be hidden by tapping the 'Aa' icon in the search bar. This means of course that the game can be designed aorund the full iOS web experience, without having to compromise other mobile devices' experiences.

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -15,9 +15,9 @@ html{
   display: grid;
   background-color: lightblue;
   grid-gap: 10px;
-  height: 90vh;
-  margin-top: 10%;
-  margin-bottom: auto;
+  height: 100vh;
+  margin-top: 0;
+  margin-bottom: 10%;
 
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows: .1fr .4fr .1fr .1fr .3fr;
@@ -68,7 +68,7 @@ html{
     display: grid;
     background-color: lightblue;
     grid-gap: 10px;
-    height: 95vh;
+    height: 100vh;
     margin-top: 0;
     margin-bottom: 0;
   
@@ -103,7 +103,7 @@ html{
     display: grid;
     background-color: lightblue;
     grid-gap: 10px;
-    height: 95vh;
+    height: 100vh;
     margin-top: 0;
     margin-bottom: 0;
   
@@ -123,7 +123,7 @@ html{
     display: grid;
     background-color: lightblue;
     grid-gap: 10px;
-    height: 95vh;
+    height: 100vh;
     margin-top: 0;
     margin-bottom: 0;
   
